[gd_scene load_steps=17 format=3 uid="uid://rtajfydhfw5h"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_g67sh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqypq"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ImageTexture" id="ImageTexture_yjcfa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqw4q"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qt8kg"]
bg_color = Color(0.31802, 0.31802, 0.31802, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shug2"]
bg_color = Color(0.233925, 0.233925, 0.233925, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc0kg"]
bg_color = Color(0.486229, 0.733503, 0.446286, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xfg3"]
bg_color = Color(0.387214, 0.606959, 0.351781, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5dea"]
bg_color = Color(0.608794, 0.548611, 0.854155, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffgle"]
bg_color = Color(0.523786, 0.449483, 0.791382, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yejw"]
bg_color = Color(0.935821, 0.585498, 0.362854, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vahsx"]
bg_color = Color(0.893148, 0.522322, 0.273019, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o2s6"]
bg_color = Color(0.404794, 0.635829, 0.875827, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ln075"]
bg_color = Color(0.306016, 0.553796, 0.802666, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehfr1"]
bg_color = Color(0.806012, 0.653539, 0.285232, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1gyb"]
bg_color = Color(0.721175, 0.581932, 0.233692, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g67sh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.860369, 0.860369, 0.860369, 1)

[node name="MainLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="MainLayout"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iqypq")

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -5.0
offset_right = -13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MenuButton" type="MenuButton" parent="MainLayout/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Menu"

[node name="Date" type="Label" parent="MainLayout/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Week 1, 2006"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="TimeIcon" type="TextureRect" parent="MainLayout/TopBar/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("ImageTexture_yjcfa")

[node name="DaysLeft" type="Label" parent="MainLayout/TopBar/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Days Left: 7"

[node name="Money" type="Label" parent="MainLayout/TopBar/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Funds: $10,000"

[node name="Reputation" type="Label" parent="MainLayout/TopBar/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Rep: 68%"

[node name="MainContent" type="MarginContainer" parent="MainLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="MainLayout/MainContent"]
layout_mode = 2

[node name="BottomNav" type="Panel" parent="MainLayout"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dqw4q")

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/BottomNav"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="Dashboard" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_qt8kg")
theme_override_styles/normal = SubResource("StyleBoxFlat_shug2")
text = "Dashboard"

[node name="Finances" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_xc0kg")
theme_override_styles/normal = SubResource("StyleBoxFlat_1xfg3")
text = "Finances"

[node name="Marketing" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_w5dea")
theme_override_styles/normal = SubResource("StyleBoxFlat_ffgle")
text = "Marketing"

[node name="HR" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_4yejw")
theme_override_styles/normal = SubResource("StyleBoxFlat_vahsx")
text = "HR"

[node name="RnD" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_4o2s6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ln075")
text = "R&D"

[node name="Operations" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_ehfr1")
theme_override_styles/normal = SubResource("StyleBoxFlat_a1gyb")
text = "Operations"

[node name="Assets" type="Button" parent="MainLayout/BottomNav/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Assets"

[node name="AdvanceWeekBtn" type="Button" parent="MainLayout/BottomNav"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -16.0
offset_right = -11.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Advance week ->"
